End of days work, still working on About page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
     </div>
   </div> <!-- end of Jumbotron -->
 
+  <div class="about" id="about-div"> <!-- Start of About Me sections -->
+    <h1 class="aboutme-head">About Me</h1>
+    <div class="bio">
+      <p>From a young age I had interest in programming however I never truly harnased that passion until now. August 2017 was a turning point in my life, an amazing opportunity arose for me to follow my dreams and become a professional web developer.</p>
+    </div>
+    <div class="row d-flex flex-row justify-content-around">
+      <div class="hobbies p-3"><img src="images/surfboard-icon.png" width="50" height="50" alt="surfing icon"> - Surfing</div>
+      <div class="hobbies p-3"><img src="images/soccerball-icon.png" width="50" height="40" alt="surfing icon"> - Football</div>
+      <div class="hobbies p-3"><img src="images/dota-symbol-icon.png" width="50" height="50" alt="surfing icon"> - Dota2</div>
+      <div class="hobbies p-3"><img src="images/coding-icon.png" width="50" height="50" alt="surfing icon"> - Coding</div>
+      <div class="hobbies p-3"><img src="images/family-icon.png" width="50" height="50" alt="surfing icon"> - Family</div>
+      <div class="hobbies p-3"><img src="images/friends-icon.png" width="50" height="50" alt="surfing icon"> - Friends</div>
+    </div>
+  </div>
+
+</body>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
