--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #b4cfe2;">
+  <nav class="navbar fixed-top navbar-expand-sm navbar-light"> <!-- Start of Navbar -->
     <a class="navbar-brand" href="#"><img src="images/wave-icon.png" width="50px" height="50px" alt="wave icon"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link ml-5" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link ml-5" href="#">About</a>
+          <a class="nav-link ml-5" href="#about-div">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link ml-5" href="#">Projects</a>
@@ -38,14 +38,19 @@
   <div class="jumbotron"> <!-- Start of the jumbotron -->
     <div class="container">
       <h1 class="display-1">Heath Burton</h1>
-      <p class="lead">This is my portfolio, all works on display are original creations and demonstrate my progression as a fullstack web developer. </p>
+      <p class="lead">FullStack Web Developer - Skills in HTML5 CSS3 Bootstrap4 Javascript(es5 & es6) All information displayed on this portfolio is original content, created by myself to demonstrate my progression as a web developer.</p>
     </div>
   </div> <!-- end of Jumbotron -->
 
   <div class="about" id="about-div"> <!-- Start of About Me sections -->
     <h1 class="aboutme-head">About Me</h1>
     <div class="bio">
-      <p>From a young age I had interest in programming however I never truly harnased that passion until now. August 2017 was a turning point in my life, an amazing opportunity arose for me to follow my dreams and become a professional web developer.</p>
+      <p>From a young age I had interest in IT and specifically programming however I never truly harnessed that passion until now. August 2017 was a turning point in my life, an amazing opportunity arose for me to follow my dreams and become a professional web developer.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet ante orci. Nunc accumsan arcu purus. Pellentesque suscipit auctor neque, nec sagittis erat accumsan id. Duis commodo dictum nunc, dictum convallis dolor tempus id. Praesent dignissim est vel lectus lobortis ornare. Vestibulum vitae volutpat magna. Vivamus ut erat rhoncus, rhoncus nisl id, gravida risus.</p>
+      <p>Cras fermentum, nisi sit amet laoreet pellentesque, enim purus facilisis urna, id malesuada risus diam in nulla. Nullam porta varius blandit. Proin nibh magna, dignissim vitae est ut, blandit elementum lectus. Ut sollicitudin sapien enim, et scelerisque nibh scelerisque vitae. Proin ullamcorper at metus ac rhoncus. Integer eu turpis eu nibh laoreet venenatis sit amet eu nibh. Integer vitae sapien dolor. Vivamus justo mauris, feugiat et mi at, suscipit pretium ligula. Phasellus suscipit nisl odio, quis sagittis ante lacinia vel. Quisque scelerisque eros at porta imperdiet.</p>
+    </div>
+    <div class="container">
+      <h4 class="hobbies-head">Hobbies and interests</h4>
     </div>
     <div class="row d-flex flex-row justify-content-around">
       <div class="hobbies p-3"><img src="images/surfboard-icon.png" width="50" height="50" alt="surfing icon"> - Surfing</div>
@@ -55,7 +60,38 @@
       <div class="hobbies p-3"><img src="images/family-icon.png" width="50" height="50" alt="surfing icon"> - Family</div>
       <div class="hobbies p-3"><img src="images/friends-icon.png" width="50" height="50" alt="surfing icon"> - Friends</div>
     </div>
-  </div>
+  </div> <!-- end of About me -->
+
+  <div class="projects"> <!-- Project cards -->
+    <h1 class="projects-head">My Projects</h2>
+ 
+    <div class="card-deck"> <!-- Start of card system -->
+      <div class="card">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Tribute Page</h5>
+          <p class="card-text">This site was created as a tribute to my father who tragically lost his life in a boating accident in the year 2000.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <a href="https://young-forest-44913.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/mncbs-thumbnail.png" alt="Image of my first ever from the ground up website"></a>
+        <div class="card-body">
+          <h5 class="card-title">Mid North Coast Baby Sitting Service</h5>
+          <p class="card-text">This project was my first ever from the ground up 100% self built website. Incorporating HTML and CSS to make a landing page for a local business.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div> <!-- end of card system -->
+  </div> <!-- end of Project cards -->
 
 </body>
 
