--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
  
     <div class="card-deck"> <!-- Start of card system -->
       <div class="card">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <a href="https://tribute-thomasburton.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/tribute-thumbnail.png" alt="img of a tribute page to my father"></a>
+
         <div class="card-body">
           <h5 class="card-title">Tribute Page</h5>
           <p class="card-text">This site was created as a tribute to my father who tragically lost his life in a boating accident in the year 2000.</p>
@@ -75,7 +76,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="https://young-forest-44913.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/mncbs-thumbnail.png" alt="Image of my first ever from the ground up website"></a>
+        <a href="https://mncbs.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/mncbs-thumbnail.png" alt="Image of my first ever from the ground up website"></a>
         <div class="card-body">
           <h5 class="card-title">Mid North Coast Baby Sitting Service</h5>
           <p class="card-text">This project was my first ever from the ground up 100% self built website. Incorporating HTML and CSS to make a landing page for a local business.</p>
