before attempting to add the carousel

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
+
       <div class="card">
         <a href="https://mncbs.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/mncbs-thumbnail.png" alt="Image of my first ever from the ground up website"></a>
         <div class="card-body">
@@ -83,6 +84,7 @@
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
+
       <div class="card">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
@@ -91,13 +93,58 @@
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
+
     </div> <!-- end of card system -->
   </div> <!-- end of Project cards -->
-<div>Test</div>
+
+<br>
+<br>
+<br>
+
+  <div class="test-card-carousel">
+    <div id="carousel">
+      <div class="hideLeft">
+        <img src="https://s16.postimg.org/vklrwoxtx/cover9.jpg">
+      </div>
+
+      <div class="prevLeftSecond">
+        <img src="https://s16.postimg.org/cgsggckzp/cover8.jpg">
+      </div>
+
+      <div class="prev">
+        <img src="https://s16.postimg.org/emmrauog5/cover7.jpg">
+      </div>
+
+      <div class="selected">
+        <img src="https://s16.postimg.org/9drqcz611/cover1.jpg">
+      </div>
+
+      <div class="next">
+        <img src="https://s16.postimg.org/pnhwfvgp1/cover6.jpg">
+      </div>
+
+      <div class="nextRightSecond">
+        <img src="https://s16.postimg.org/edp6kxbnp/cover4.jpg">
+      </div>
+
+      <div class="hideRight">
+        <img src="https://s16.postimg.org/fij8qay4l/cover3.jpg">
+      </div>
+    </div> <!-- end of carousel area -->
+  
+    <div class="buttons">
+      <button id="prev">Prev</button>
+      <button id="next">Next</button>
+    </div> <!-- end of buttons to scroll left and right -->
+
+</div> <!-- end of test carsousel area -->
+
+
 </body>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
