trying to fix skills icons

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <p class="lead intro-body">FullStack Web Developer - Skills in HTML5, CSS3, Bootstrap4, Javascript(es5 & es6) and jQuery. All information displayed on this portfolio is original content, created by myself to demonstrate my progression as a web developer.</p>
     </div>
     <div class="row d-flex flex-row justify-content-around skills-icons">
-        <div class="hobbies p-3"><img src="images/HTML5-icon.png" width="50" height="50" alt="surfing icon"> - HTML5</div>
-        <div class="hobbies p-3"><img src="images/css3-icon.png" width="50" height="40" alt="surfing icon"> - CSS3</div>
-        <div class="hobbies p-3"><img src="images/js-icon.png" width="50" height="50" alt="surfing icon"> - JavaScript</div>
-        <div class="hobbies p-3"><img src="images/es6-icon.svg" width="50" height="50" alt="surfing icon"> - ES6</div>
-        <div class="hobbies p-3"><img src="images/bootstrap4-icon.png" width="50" height="50" alt="surfing icon"> - Bootstrap 4</div>
-        <div class="hobbies p-3"><img src="images/git-icon.png" width="50" height="50" alt="surfing icon"> - Git</div>
+        <div class="hobbies p-3"><img src="images/HTML5-icon.png" width="50" height="50" alt="html5 icon"> - HTML5</div>
+        <div class="hobbies p-3"><img src="images/css3-icon.png" width="50" height="40" alt="css3 icon"> - CSS3</div>
+        <div class="hobbies p-3"><img src="images/js-icon.png" width="50" height="50" alt="JavaScript icon"> - JavaScript</div>
+        <div class="hobbies p-3"><img src="images/es6-icon.svg" width="50" height="50" alt="Es6 icon"> - ES6</div>
+        <div class="hobbies p-3"><img src="images/bootstrap4-icon.png" width="50" height="50" alt="Bootstrap icon"> - Bootstrap 4</div>
+        <div class="hobbies p-3"><img src="images/git-icon.png" width="50" height="50" alt="git icon"> - Git</div>
       </div>
   </div> <!-- end of Jumbotron -->
 
