--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <p class="lead intro-body">FullStack Web Developer - Skills in HTML5, CSS3, Bootstrap4, Javascript(es5 & es6) and jQuery. All information displayed on this portfolio is original content, created by myself to demonstrate my progression as a web developer.</p>
     </div>
     <div class="row d-flex flex-row justify-content-around skills-icons">
-        <div class="hobbies p-3"><img src="images/HTML5-icon.png" width="50" height="50" alt="html5 icon"> - HTML5</div>
-        <div class="hobbies p-3"><img src="images/css3-icon.png" width="50" height="50" alt="css3 icon"> - CSS3</div>
-        <div class="hobbies p-3"><img src="images/js-icon.png" width="50" height="50" alt="JavaScript icon"> - JavaScript</div>
-        <div class="hobbies p-3"><img src="images/es6-icon.svg" width="50" height="50" alt="Es6 icon"> - ES6</div>
-        <div class="hobbies p-3"><img src="images/git-icon.png" width="50" height="50" alt="git icon"> - Git</div>
-        <div class="hobbies p-3"><img src="images/bootstrap4-icon.png" width="50" height="50" alt="Bootstrap icon"> - Bootstrap 4</div>
-      </div>
+      <div class="hobbies p-3"><img src="images/css3-icon.png" width="50" height="50" alt="css3 icon"></div>
+      <div class="hobbies p-3"><img src="images/js-icon.png" width="50" height="50" alt="JavaScript icon"></div>
+      <div class="hobbies p-3"><img src="images/es6-icon.png" width="50" height="50" alt="Es6 icon"></div>
+      <div class="hobbies p-3"><img src="images/git-icon.png" width="60" height="40" alt="git icon"></div>
+      <div class="hobbies p-3"><img src="images/bootstrap4-icon.png" width="50" height="50" alt="Bootstrap icon"></div>
+      <div class="hobbies p-3"><img src="images/jquery-icon.png" width="50" height="50" alt="jQuery icon"></div>
+    </div>
   </div> <!-- end of Jumbotron -->
 
 
