final draft pre icon links, full contents included

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="jumbotron jumbotron-fluid"> <!-- Start of the jumbotron -->
     <div class="container">
       <h1 class="display-2 intro-head">Heath Burton</h1>
-      <p class="lead intro-body">FullStack Web Developer - Skills in HTML5, CSS3, Bootstrap4, Javascript(es5 & es6) and jQuery. All information displayed on this portfolio is original content, created by myself to demonstrate my progression as a web developer.</p>
+      <p class="lead intro-body">Aspiring FullStack Web Developer - Currently accomplished in HTML5, CSS3, Bootstrap 4, Vanilla Javascript(es5 and es6) git and jQuery. Currently studying React.js and backend technologies Node and MongoDB. All information displayed on this portfolio is original content created by myself and demonstrate my progression as a web developer.</p>
     </div>
     <div class="row d-flex flex-row justify-content-around skills-icons">
       <div class="hobbies p-3"><img src="images/css3-icon.png" width="50" height="50" alt="css3 icon"></div>
@@ -55,8 +55,8 @@
     <h1 class="aboutme-head">About Me</h1>
     <div class="bio">
       <p>From a young age I had interest in IT and specifically programming however I never truly harnessed that passion until now. August 2017 was a turning point in my life, an amazing opportunity arose for me to follow my dreams and become a professional web developer.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet ante orci. Nunc accumsan arcu purus. Pellentesque suscipit auctor neque, nec sagittis erat accumsan id. Duis commodo dictum nunc, dictum convallis dolor tempus id. Praesent dignissim est vel lectus lobortis ornare. Vestibulum vitae volutpat magna. Vivamus ut erat rhoncus, rhoncus nisl id, gravida risus.</p>
-      <p>Cras fermentum, nisi sit amet laoreet pellentesque, enim purus facilisis urna, id malesuada risus diam in nulla. Nullam porta varius blandit. Proin nibh magna, dignissim vitae est ut, blandit elementum lectus. Ut sollicitudin sapien enim, et scelerisque nibh scelerisque vitae. Proin ullamcorper at metus ac rhoncus. Integer eu turpis eu nibh laoreet venenatis sit amet eu nibh. Integer vitae sapien dolor. Vivamus justo mauris, feugiat et mi at, suscipit pretium ligula. Phasellus suscipit nisl odio, quis sagittis ante lacinia vel. Quisque scelerisque eros at porta imperdiet.</p>
+      <p>I have been studying fulltime since that date to develop the necessary skills to transfer my career into the web development world. I have used online learning resources such as Team Treehouse, Udemy, Wesbos and various Youtube channels. Nothing helps you learn more than actually building things from the ground up and that is what this page demonstrates.</p>
+      <p>I understand what is involved in taking this step, mostly that I will code at least 1 hour a day every day for the rest of my life and by being a developer you become a life long active learner. I am excited for the future and what it will bring.</p>
     </div>
     <div class="container">
       <h4 class="hobbies-head">Hobbies and interests</h4>
@@ -112,13 +112,9 @@
       </div>
       
       <div class="project-desc-div">
-        <p class="project-description">Click on the "Next" and "Previous" button or use the "Left" or "Right" arrow keys to scroll through the list of projects I have completed. Click on the image to open the website.</p>
+        <p class="project-description">Click on the "Next" or "Previous" button or use the "Left" or "Right" arrow keys to scroll through the list of projects I have completed. Click on the image to open the website.</p>
       </div>
     </div> <!-- end of buttons to scroll left and right -->
-  
-    <!-- <div class="project-desc-div">
-      <p class="project-description">Click on the "Next" and "Previous" button or use the "Left" or "Right" arrow keys to scroll through the list of projects I have completed. Click on the image to open the website.</p>
-    </div> -->
 
   </div> <!-- end of the carousel section -->
   
@@ -126,7 +122,12 @@
 
   <div class="contacts-div" id="contact-me"> <!-- Start of the contacts area -->
     <div class="contact-area">
-
+      <h1 class="contact-head">Contact Me</h2>
+    </div>
+    <div class="row d-flex flex-row justify-content-around contact-icons">
+      <div class="hobbies p-3"><img src="images/gmail-icon.png" width="50" height="50" alt="icon of gmail"> - Gmail</div>
+      <div class="hobbies p-3"><img src="images/twitter-icon.png" width="50" height="50" alt="icon of twitter"> - Twitter</div>
+      <div class="hobbies p-3"><img src="images/linkedin-icon.png" width="50" height="50" alt="LinkedIn icon"> - LinkedIn</div>
     </div>
   </div>
 
