final draft - first official release

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
       <h1 class="contact-head">Contact Me</h2>
     </div>
     <div class="row d-flex flex-row justify-content-around contact-icons">
-      <div class="hobbies p-3"><img src="images/gmail-icon.png" width="50" height="50" alt="icon of gmail"> - Gmail</div>
-      <div class="hobbies p-3"><img src="images/twitter-icon.png" width="50" height="50" alt="icon of twitter"> - Twitter</div>
-      <div class="hobbies p-3"><img src="images/linkedin-icon.png" width="50" height="50" alt="LinkedIn icon"> - LinkedIn</div>
+      <div class="socialm p-3"><a href="mailto:rubickdev@gmail.com"><img src="images/gmail-icon.png" width="50" height="50" alt="icon of gmail"></a> - Gmail</div>
+      <div class="socialm p-3"><a href="https://twitter.com/rubick_dev" target="_blank"><img src="images/twitter-icon.png" width="50" height="50" alt="icon of twitter"></a> - Twitter</div>
+      <div class="socialm p-3"><a href="https://www.linkedin.com/in/heathburton/" target="_blank"><img src="images/linkedin-icon.png" width="50" height="50" alt="LinkedIn icon"></a> - LinkedIn</div>
     </div>
   </div>
 
