final draft - first official release, with things to do list

--- a/index.html
+++ b/index.html
@@ -139,3 +139,13 @@
   <script src="app.js"></script>
 </body>
 </html>
+
+
+<!-- Things I still need to do
+   1. Make the navbar menu items highlight as you scroll over them.
+   2. Spruse up the contacts section
+   3. remove the prev and next button when it is at an end of the carousel
+   4. fix the button being constnalty pressed on touch screen
+   5. add 5 more website to complete the portfolio of works.
+   6. fix the reposniveness of the page (last issue to fix - big job!)
+  -->
