--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
   </div> <!-- end of the carousel section -->
   
 
-
   <div class="contacts-div" id="contact-me"> <!-- Start of the contacts area -->
     <div class="contact-area">
       <h1 class="contact-head">Contact Me</h2>
@@ -131,7 +130,6 @@
     </div>
   </div>
 
-</body>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -145,7 +143,7 @@
    1. Make the navbar menu items highlight as you scroll over them.
    2. Spruse up the contacts section
    3. remove the prev and next button when it is at an end of the carousel
-   4. fix the button being constnalty pressed on touch screen
+   4. fix the button being constanlty pressed on touch screen
    5. add 5 more website to complete the portfolio of works.
    6. fix the reposniveness of the page (last issue to fix - big job!)
   -->
