added new project to the carousel

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
 
       <div class="next">
-        <img src="https://s16.postimg.org/pnhwfvgp1/cover6.jpg">
+          <a href="https://quoteguessinggame.herokuapp.com/" target="_blank"><img src="images/tqgg-thumbnail.png" alt="Image of my first ever Javascript heavy website"></a>>
       </div>
 
       <div class="nextRightSecond">
