Added Weather App to the carousel

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       </div>
 
       <div class="prevLeftSecond">
-        <img src="https://s16.postimg.org/9drqcz611/cover1.jpg">
+          <a href="https://tribute-thomasburton.herokuapp.com/" target="_blank"><img src="images/tribute-thumbnail.png" alt="img of a tribute page to my father"></a>
       </div>
 
       <div class="prev">
-        <a href="https://tribute-thomasburton.herokuapp.com/" target="_blank"><img src="images/tribute-thumbnail.png" alt="img of a tribute page to my father"></a>
+        <a href="https://fccweathermeup.herokuapp.com/" target="_blank"><img src="images/fccWeatherApp-thumbnail.png" alt="img of the FCC WeatehrMeUp application"></a>
       </div>
 
       <div class="selected">
