added wiki-search-tool to porftfolio carousel

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       </div>
 
       <div class="next">
-          <a href="https://quoteguessinggame.herokuapp.com/" target="_blank"><img src="images/tqgg-thumbnail.png" alt="Image of my first ever Javascript heavy website"></a>>
+          <a href="https://quoteguessinggame.herokuapp.com/" target="_blank"><img src="images/tqgg-thumbnail.png" alt="Image of my first ever Javascript heavy website"></a>
       </div>
 
       <div class="nextRightSecond">
-        <img src="https://s16.postimg.org/edp6kxbnp/cover4.jpg">
+        <a href="https://wikisearchtool.herokuapp.com/" target="_blank"><img src="images/wikisearch-thumbnail.jpg" alt="Image of my wiki search tool website"></a>
       </div>
 
       <div class="hideRight">
