updated Twitch TV portfolio addition

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     
     <div id="carousel"> <!-- Start of the rotating cards area of carousel-->
       <div class="hideLeft">
-        <img src="https://s16.postimg.org/emmrauog5/cover7.jpg">
+        <a href="https://whoistwitchtvonline.herokuapp.com/" target="_blank"><img src="images/twitchtv-thumbnail.jpg" alt="img of Twitch TV app thumbnail"></a>
       </div>
 
       <div class="prevLeftSecond">
