updated the carousel with JSCalc fcc project

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
 
       <div class="hideRight">
-        <img src="https://s16.postimg.org/fij8qay4l/cover3.jpg">
+        <a href="https://fccjscalc.herokuapp.com/" target="_blank"><img src="https://farm1.staticflickr.com/973/40114170500_6f1200ca05.jpg" alt="Image of my JSCalculator"></a>
       </div>
     </div> <!-- end of rotating cards area -->
 
@@ -127,6 +127,7 @@
       <div class="socialm p-3"><a href="mailto:rubickdev@gmail.com"><img src="images/gmail-icon.png" width="50" height="50" alt="icon of gmail"></a> - Gmail</div>
       <div class="socialm p-3"><a href="https://twitter.com/rubick_dev" target="_blank"><img src="images/twitter-icon.png" width="50" height="50" alt="icon of twitter"></a> - Twitter</div>
       <div class="socialm p-3"><a href="https://www.linkedin.com/in/heathburton/" target="_blank"><img src="images/linkedin-icon.png" width="50" height="50" alt="LinkedIn icon"></a> - LinkedIn</div>
+      <div class="socialm p-3"><a href="https://github.com/Rubick-dev" target="_blank"><img src="images/github-icon.png" width="50" height="50" alt="github icon"></a> - GitHub Profile</div>
     </div>
   </div>
 
