updated the things to do list

--- a/index.html
+++ b/index.html
@@ -147,4 +147,5 @@
    4. fix the button being constanlty pressed on touch screen
    5. add 5 more website to complete the portfolio of works.
    6. fix the reposniveness of the page (last issue to fix - big job!)
+   7. more mobile friendly version
   -->
