updated carousel to contain mimicme

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 
       <div class="hideRight">
         <a href="https://mncbs.herokuapp.com/" target="_blank"><img src="images/mncbs-thumbnail.png" alt="Image of my first ever from the ground up website"></a>
+      </div>
+
+    <div class="hideRight">
+      <a href="https://mimicsimon.herokuapp.com/" target="_blank"><img src="images/mimicme-thumbnail.png" alt="Image of the Simon game I named MimicMe"></a>
     </div>
 
 
